fix(posts): fix card responsiveness on smaller screens

--- a/src/pages/css/custom.css
+++ b/src/pages/css/custom.css
@@ -77,19 +77,27 @@ header {
 }
 
 .edit {
-  width: 6rem;
-  border-radius: 1.1rem;
-  margin: 0 1rem;
+  width: 5rem;
+  border-radius: 1.25rem;
+  border: none;
+  margin-right: 0.5rem;
+  font-size: 0.8rem;
   font-weight: 500;
+  height: 1.25rem;
+  line-height: 1.1rem;
 }
 
 .delete {
   width: 6rem;
-  border-radius: 1.1rem;
-  margin: 0 1rem;
+  border-radius: 1.25rem;
+  border: none;
+  margin: 0 0.5rem;
   background: black;
   color: whitesmoke !important;
+  font-size: 0.8rem;
   font-weight: 500;
+  height: 1.25rem;
+  line-height: 1.1rem;
 }
 
 .round {
